--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,13 +17,18 @@
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
-
+@import "bootstrap/scss/bootstrap.scss";
 /**
  * Import layouts
  * It's a best practice to use a different partial for each page
  */
 
 @import "layouts/home";
+@import "layouts/pagina1";
+@import "layouts/pagina2";
+@import "layouts/pagina3";
+@import "layouts/nav";
+@import "layouts/footer";
 
 /**
  * Do NOT include anything else in this file!
